<resources>
    <string name="app_name">AlanTorizExamen</string>
    <string name="text_list_login_view">Registrar usuario</string>
    <string name="txt_list_home_view">Crear encuesta</string>
    <string name="txt_list_salir">Salir del sistema</string>
    <string name="txtv_correo">Escriba su correo</string>
    <string name="btn_Iniciar_Sesion">Iniciar Sesion</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="welcome">Bienvenido</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="txtv_name">Escriba su nombre</string>
    <string name="logo_columpio">Logo Columpio</string>
    <string name="txtv_passwordk">Escriba su contrasena</string>
    <string name="txtvphone">Escriba su celular</string>
    <string name="txt_survey">Mi encuesta</string>
    <string name="txtv_wings">Wings</string>
    <string name="txtv_burgers">Burgers</string>
    <string name="txtv_hotdogs">Hotdgos</string>
    <string name="text_familiar">Familiar?</string>
    <string name="ckbCerveza">Cerveza</string>
    <string name="ckbRefresco">Refresc</string>
    <string name="ckbMalteada">Malteada</string>
    <string name="btnCrear">Crear</string>
    <string name="btnEditar">Editar</string>
    <string name="txt_Recomend">Nos Recomendarias?</string>
    <string name="autor">By Samuel Toriz</string>
    <string name="columpio">Restaurante \"El Columpio\"</string>
    <string name="txt_list">Ver Lista</string>
    <string name="text_recycler">Recycler View</string>
    <string name="edad">Escriba su edad</string>
    <string name="FavDrink">Bebida preferida</string>
    <string name="FavFood">Comida preferida</string>
    <string name="Zone">Zona que nos visita</string>
    <string name="SocialMedia">Social Media que conoces de nosotrs</string>
    <string name="TipoPedido">Como haces tus pedidos?</string>
    <string name="Facebook">Facebook</string>
    <string name="Instagram">Instagram</string>
    <string name="AppMovil">Utilizarias una app Movil?</string>
    <string name="hint_date">Click para fecha</string>
    <string name="hint_time">Click para hora</string>
    <string name="txt_Db">Ver lista DB</string>
</resources>